# rlmin

./: .gitignore  README.md  pyproject.toml
data/: prompts.jsonl
src/rlmin/: __init__.py  buffer.py  dataset.py  launcher.py  rewards.py  rollout_worker.py  trainer.py
src/rlmin/configs/: config.yaml
src/rlmin/configs/buffer/: default.yaml
src/rlmin/configs/data/: aime24.yaml  default.yaml  hf_math500.yaml  math500.yaml
src/rlmin/configs/eval/: aime24.yaml  default.yaml  hf_aime2024.yaml
src/rlmin/configs/gpus/: collocated.yaml  split.yaml
src/rlmin/configs/lora/: disabled.yaml  enabled.yaml
src/rlmin/configs/model/: default.yaml  qwen3_1_7b.yaml
src/rlmin/configs/reward/: llm.yaml  verifiable.yaml
src/rlmin/configs/rollout/: default.yaml  qwen3_1_7b.yaml
src/rlmin/configs/training/: default.yaml
src/rlmin/configs/wandb/: default.yaml
